# macrostack

./: .dockerignore  .eslintrc.js  .lintstagedrc.js  .prettierrc.json  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.cargo/: config.toml
.github/workflows/: build.yml  checks.yml  deploy.yml  fossa.yml
apps/frontend/: package.json  tsconfig.json
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
common/protocol/: .gitignore  Cargo.toml  buf.gen.yaml  build.rs  package.json  tsconfig.json
common/protocol/src/: index.ts  lib.rs
crates/consul/: Cargo.toml
crates/consul/src/: lib.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  main.tf  variables.tf
infrastructure/charts/: consul.yaml
infrastructure/macrostack/: Chart.yaml  values.yaml
infrastructure/macrostack/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infrastructure/modules/consul/: main.tf  outputs.tf  variables.tf
infrastructure/modules/example-service/: Dockerfile  deployment.yaml  main.tf  service-defaults.yaml  service.yaml  variables.tf
infrastructure/modules/gateway/: Dockerfile  deployment.yaml  main.tf  service-defaults.yaml  service.yaml  variables.tf
scripts/: install.sh
services/example-service/: Cargo.toml  Dockerfile
services/example-service/src/: main.rs
(+26 files in other folders)
