[package]
name = "example-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

macrostack-consul = { path = "../../crates/consul" }
macrostack-protocol = { path = "../../common/protocol", features = ["hello"] }
